# gst_video_server

./: CMakeLists.txt
